resetup the details that should be public

--- a/index.html
+++ b/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>In Progress</title>
+    <meta charset="UTF-8">
+    <title>Tushar Rangaswamy</title>
 </head>
 <body>
-<h1>Welcome</h1>
-<p>I don't any seats for you yet, come back later maybe</p>
+    <h1>Tushar Rangaswamy</h1>
+    <div id="links">
+        <a href="https://github.com/MistOfJudgement">GitHub</a>
+        <a href="https://www.youtube.com/@tusharrangaswamy5910">Youtube</a>
+        <a href="mailto:stuffcopresident@gmail.com">Email</a>
+        </div>
+    <p>I am a Computer Scientist currently studying at George Mason University.
+      No concentration, no specialty, learning as much as I can.</p>
+    <h2>Education</h2>
+    <ul>
+      <li>Thomas Jefferson High School for Science and Technology, 2018-2022
+        <ul>
+          <li>AP Computer Science with Data Structures</li>
+          <li>Artificial Intelligence</li>
+          <li>Computer Vision</li>
+          <li>Mobile and Web Development</li>
+          <li>Machine Learning</li>
+        </ul>
+      </li>
+      <li>George Mason University, Computer Science, 2022-Present
+          <ul>
+          <li>CS 211 Object Oriented Programming</li>
+          <li>CS 262 Intro to Low Level Programming</li>
+          <li>CS 310 Data Structures</li>
+        </ul>
+      </li>
+    </ul>
+    <h2>Projects</h2>
+    <ul>
+      <li>Personal Website
+        <ul>
+          <li>HTML, CSS, JavaScript</li>
+          <li>Hosted on GitHub Pages</li>
+          <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io">Github Repo</a></li>
+        </ul>
+      </li>
+      <li>Bad Apple in Celeste
+        <ul>
+          <li>Monogame, C#, OpenCV, C++</li>
+          <li><a href="https://github.com/MistOfJudgement/BadAppleCeleste">GitHub Repo</a></li>
+          <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
+        </ul>
+      </li>
+      <li>Bad Apple in a Terminal
+        <ul>
+          <li>Node.js</li>
+          <li><a href="https://github.com/MistOfJudgement/BadAppleTerminal">GitHub Repo</a></li>
+        </ul>
+      </li>
+      <li>Analog Frequency Detector
+        <ul>
+          <li>For a high school analog electronics class</li>
+          <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
+        </ul>
+      </li>
+      <li>High School Senior Research - Teaching an AI to play like a person
+        <ul>
+          <li>Python, Tensorflow</li>
+          <li>Currently locating files</li>
+        </ul>
+      </li>
+    </ul>
 </body>
 </html>
