--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
         </ul>
       </li>
+      <li>
+        Web Dev Project - Partial recreation of Keep Talking and Nobody Explodes
+        <ul>
+          <li>HTML, CSS, JavaScript, Custom HTML Elements, SVG</li>
+          <li><a href="./bombs.html">Link to Project</a></li>
+          <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io/blob/main/bombs.html">GitHub Repo</a></li>
+        </ul>
+      </li>
       <li>High School Senior Research - Teaching an AI to play like a person
         <ul>
           <li>Python, Tensorflow</li>
