--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="links">
         <a href="https://github.com/MistOfJudgement">GitHub</a>
         <a href="https://www.youtube.com/@tusharrangaswamy5910">Youtube</a>
-        <a href="mailto:stuffcopresident@gmail.com">Email</a>
+        <a href="mailto:tusharrangaswamy@gmail.com">Email</a>
         </div>
     <p>I am a Computer Scientist currently studying at George Mason University.
       No concentration, no specialty, learning as much as I can.</p>
