--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <body>
     <h1>Tushar Rangaswamy</h1>
     <div id="links">
-        <a href="https://github.com/MistOfJudgement">GitHub</a>
-        <a href="https://www.youtube.com/@tusharrangaswamy5910">Youtube</a>
-        <a href="mailto:tusharrangaswamy@gmail.com">Email</a>
-        </div>
+      <a href="https://github.com/MistOfJudgement">GitHub</a>
+      <a href="https://www.youtube.com/@tusharrangaswamy5910">Youtube</a>
+      <a href="mailto:tusharrangaswamy@gmail.com">Email</a>
+      <a href="https://mistofjudgement.itch.io/">Itch.io</a>
+    </div>
     <p>I am a Computer Scientist currently studying at George Mason University.
       No concentration, no specialty, learning as much as I can.</p>
     <h2>Education</h2>
@@ -64,14 +65,34 @@
         Web Dev Project - Partial recreation of Keep Talking and Nobody Explodes
         <ul>
           <li>HTML, CSS, JavaScript, Custom HTML Elements, SVG</li>
-          <li><a href="./bombs.html">Link to Project</a></li>
+          <li><a href="./bombs.html">Play here</a></li>
           <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io/blob/main/bombs.html">GitHub Repo</a></li>
+        </ul>
+      </li>
+      <li>Android Development - Partial recreation of specfic modules from Keep Talking and Nobody Explodes
+        <ul>
+          <li>Android Studio, Java</li>
+          <li><a href="https://github.com/MistOfJudgement/KTANE">Github Repo</a></li>
         </ul>
       </li>
       <li>High School Senior Research - Teaching an AI to play like a person
         <ul>
           <li>Python, Tensorflow</li>
           <li>Currently locating files</li>
+        </ul>
+      </li>
+      <li>Arduino Midi Drum
+        <ul>
+          <li>Uses an Arduino Micro and piezoelectric sensors</li>
+          <li>Code adapted from <a href="https://github.com/evankale/ArduinoMidiDrums">this other repository</a></li>
+          <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
+        </ul>
+      </li>
+      <li>Python Text to Speech
+        <ul>
+          <li>For when I didn't want to speak in voice chat</li>
+          <li>Python</li>
+          <li><a href="https://github.com/MistOfJudgement/SpeechStuff">Github Repo</a></li>
         </ul>
       </li>
     </ul>
