--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <li>Monogame, C#, OpenCV, C++</li>
           <li><a href="https://github.com/MistOfJudgement/BadAppleCeleste">GitHub Repo</a></li>
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>Bad Apple in a Terminal
@@ -59,6 +60,7 @@
         <ul>
           <li>For a high school analog electronics class</li>
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>
@@ -86,6 +88,7 @@
           <li>Uses an Arduino Micro and piezoelectric sensors</li>
           <li>Code adapted from <a href="https://github.com/evankale/ArduinoMidiDrums">this other repository</a></li>
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>Python Text to Speech
