Added CSS flexbox

--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Tushar Rangaswamy</title>
+    <style>
+      .cards {
+        display: flexbox;
+        flex-wrap: wrap;
+      }
+      .cards > li {
+        width: fit-content;
+        border: 2px black solid;
+        margin: 6px;
+        text-align: center;
+        list-style-type: none;
+        flex: 1 1 content;
+      }
+      .cards > li > ul {
+        text-align: left;
+      }
+      iframe {
+        position: relative;
+        width: 100%;
+        height: 0;
+        padding-bottom: 56.25%; /* 16:9 aspect ratio (height divided by width) */
+      }
+
+      iframe::before {
+        content: "";
+        display: block;
+        padding-top: 56.25%; /* 16:9 aspect ratio (height divided by width) */
+      }
+    </style>
 </head>
 <body>
     <h1>Tushar Rangaswamy</h1>
@@ -34,64 +63,72 @@
       </li>
     </ul>
     <h2>Projects</h2>
-    <ul>
-      <li>Personal Website
+    <ul class="cards">
+      <li>
+        <h4>Personal Website</h4>
         <ul>
           <li>HTML, CSS, JavaScript</li>
           <li>Hosted on GitHub Pages</li>
           <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io">Github Repo</a></li>
         </ul>
       </li>
-      <li>Bad Apple in Celeste
+      <li>
+        <h4>Bad Apple in Celeste</h4>
         <ul>
           <li>Monogame, C#, OpenCV, C++</li>
           <li><a href="https://github.com/MistOfJudgement/BadAppleCeleste">GitHub Repo</a></li>
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="120%" src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
-      <li>Bad Apple in a Terminal
+      <li>
+        <h4>Bad Apple in a Terminal</h4>
         <ul>
           <li>Node.js</li>
           <li><a href="https://github.com/MistOfJudgement/BadAppleTerminal">GitHub Repo</a></li>
         </ul>
       </li>
-      <li>Analog Frequency Detector
+      <li>
+        <h4>Analog Frequency Detector</h4>
         <ul>
           <li>For a high school analog electronics class</li>
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="120%" src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>
-        Web Dev Project - Partial recreation of Keep Talking and Nobody Explodes
+        <h4>Web Dev Project - Partial recreation of Keep Talking and Nobody Explodes</h4>
         <ul>
           <li>HTML, CSS, JavaScript, Custom HTML Elements, SVG</li>
           <li><a href="./bombs.html">Play here</a></li>
           <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io/blob/main/bombs.html">GitHub Repo</a></li>
         </ul>
       </li>
-      <li>Android Development - Partial recreation of specfic modules from Keep Talking and Nobody Explodes
+      <li>
+        <h4>Android Development - Partial recreation of specfic modules from Keep Talking and Nobody Explodes</h4>
         <ul>
           <li>Android Studio, Java</li>
           <li><a href="https://github.com/MistOfJudgement/KTANE">Github Repo</a></li>
         </ul>
       </li>
-      <li>High School Senior Research - Teaching an AI to play like a person
+      <li>
+        <h4>High School Senior Research - Teaching an AI to play like a person</h4>
         <ul>
           <li>Python, Tensorflow</li>
           <li>Currently locating files</li>
         </ul>
       </li>
-      <li>Arduino Midi Drum
+      <li>
+        <h4>Arduino Midi Drum</h4>
         <ul>
           <li>Uses an Arduino Micro and piezoelectric sensors</li>
           <li>Code adapted from <a href="https://github.com/evankale/ArduinoMidiDrums">this other repository</a></li>
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe width="120%" src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
-      <li>Python Text to Speech
+      <li>
+        <h4>Python Text to Speech</h4>
         <ul>
           <li>For when I didn't want to speak in voice chat</li>
           <li>Python</li>
