fixed cards layout

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <title>Tushar Rangaswamy</title>
     <style>
       .cards {
-        display: flexbox;
+        display: flex;
         flex-wrap: wrap;
       }
       .cards > li {
-        width: fit-content;
+        /* display: ; */
         border: 2px black solid;
-        margin: 6px;
+        padding: 0 0 4px 4px;
         text-align: center;
         list-style-type: none;
         flex: 1 1 content;
+        width: max-content;
       }
       .cards > li > ul {
         text-align: left;
@@ -67,7 +68,7 @@
           <li>Monogame, C#, OpenCV, C++</li>
           <li><a href="https://github.com/MistOfJudgement/BadAppleCeleste">GitHub Repo</a></li>
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
-          <iframe width="120%" src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>
@@ -82,7 +83,7 @@
         <ul>
           <li>For a high school analog electronics class</li>
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
-          <iframe width="120%" src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>
@@ -113,7 +114,7 @@
           <li>Uses an Arduino Micro and piezoelectric sensors</li>
           <li>Code adapted from <a href="https://github.com/evankale/ArduinoMidiDrums">this other repository</a></li>
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
-          <iframe width="120%" src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe  src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
       <li>
