--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         width: 100%;
         height: 100%;
       }
+      #projects {
+        text-align: center;
+      }
     </style>
 </head>
 <body>
@@ -65,7 +68,7 @@
         </ul>
       </li>
     </ul>
-    <h2>Projects</h2>
+    <h2 id="projects">Projects</h2>
     <ul class="cards">
       <li>
         <h4>Personal Website</h4>
@@ -148,5 +151,24 @@
         </ul>
       </li>
     </ul>
+    <div id="footer">
+      <button onclick="toggleCSS()">Toggle CSS</button>
+    </div>
+    <script>
+      
+      function disableCSSStyle() {
+        document.styleSheets[0].disabled = true;
+      }
+      function enableCSSStyle() {
+        document.styleSheets[0].disabled = false;
+      }
+      function toggleCSS() {
+        if (document.styleSheets[0].disabled) {
+          enableCSSStyle();
+        } else {
+          disableCSSStyle();
+        }
+      }
+    </script>
 </body>
 </html>
