--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
           <li>Hosted on GitHub Pages</li>
           <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io">Github Repo</a></li>
         </ul>
+        <div class="container">
+          <iframe src="./index.html" title="Personal Website" ></iframe>
+        </div>
       </li>
       <li>
         <h4>Bad Apple in Celeste</h4>
@@ -51,7 +54,7 @@
           <li><a href="https://github.com/MistOfJudgement/BadAppleCeleste">GitHub Repo</a></li>
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
         </ul>
-        <div class="youtube-container">
+        <div class="container">
           <iframe src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
@@ -68,7 +71,7 @@
           <li>For a high school analog electronics class</li>
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
         </ul>
-        <div class="youtube-container">
+        <div class="container">
           <iframe src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
@@ -104,7 +107,7 @@
           <li>Code adapted from <a href="https://github.com/evankale/ArduinoMidiDrums">this other repository</a></li>
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
         </ul>
-        <div class="youtube-container">
+        <div class="container">
           <iframe  src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
