Added link to research repo

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
           <li>Teaching an AI to play like a person</li>
           <li>Python, Tensorflow</li>
-          <li>Currently locating files</li>
+          <li><a href="https://github.com/MistOfJudgement/SeniorResearch">Github Repo</a></li>
         </ul>
       </li>
       <li>
