--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <li>CS 211 Object Oriented Programming</li>
           <li>CS 262 Intro to Low Level Programming</li>
           <li>CS 310 Data Structures</li>
+          <li>CS 330 Formal Methods and Models</li>
+          <li>CS 367 Computer Systems and Programming</li>
         </ul>
       </li>
     </ul>
@@ -55,7 +57,7 @@
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube-nocookie.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -72,7 +74,7 @@
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube-nocookie.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -108,7 +110,7 @@
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe  src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe  src="https://www.youtube-nocookie.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -117,6 +119,33 @@
           <li>For when I didn't want to speak in voice chat</li>
           <li>Python</li>
           <li><a href="https://github.com/MistOfJudgement/SpeechStuff">Github Repo</a></li>
+        </ul>
+      </li>
+      <li>
+        <h4>Video Games</h4>
+        <ul>
+          <li>Games I made, typically within a short timefram</li>
+          <li><a href="https://mistofjudgement.itch.io/">Itch.io Page</a></li>
+        </ul>
+      </li>
+      <li>
+        <h4>Cirno's Perfect Math Class</h4>
+        <ul>
+          <li>Me trying to work with my own game engine</li>
+          <li>Typescript</li>
+          <li><a href="https://github.com/MistOfJudgement/touhouMath">Github Repo</a></li>
+          <li><a href="https://mistofjudgement.github.io/touhouMath/">Play Game</a></li>
+          <li>Used <a href="https://sparen.github.io/ph3tutorials/ph3tutorials.html">Sparen's tutorials</a> as a reference for structures</li>
+        </ul>
+      </li>
+      <li>
+        <h4>Projector board</h4>
+        <ul>
+          <li>Using a projector like a whiteboard</li>
+          <li>OpenCV, Python</li>
+          <li><a href="https://www.youtube.com/watch?v=zuSD_I9mtzo">Video Demo</a></li>
+          <li><a href="https://github.com/MistOfJudgement/Projectorboard">Github Repo</a></li>
+          <iframe src="https://www.youtube-nocookie.com/embed/zuSD_I9mtzo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
       </li>
     </ul>
