--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Tushar Rangaswamy</title>
-    <link rel="stylesheet" href="./clean.css"> 
+  <meta charset="UTF-8">
+  <title>Tushar Rangaswamy</title>
+  <link rel="stylesheet" href="./clean.css">
 </head>
+
 <body>
+  <header>
     <h1>Tushar Rangaswamy</h1>
     <div id="links">
       <a href="https://github.com/MistOfJudgement">GitHub</a>
@@ -15,28 +18,9 @@
     </div>
     <p>I am a Computer Scientist currently studying at George Mason University.
       No concentration, no specialty, learning as much as I can.</p>
-    <h2>Education</h2>
-    <ul>
-      <li>Thomas Jefferson High School for Science and Technology, 2018-2022
-        <ul>
-          <li>AP Computer Science with Data Structures</li>
-          <li>Artificial Intelligence</li>
-          <li>Computer Vision</li>
-          <li>Mobile and Web Development</li>
-          <li>Machine Learning</li>
-        </ul>
-      </li>
-      <li>George Mason University, Computer Science, 2022-Present
-          <ul>
-          <li>CS 211 Object Oriented Programming</li>
-          <li>CS 262 Intro to Low Level Programming</li>
-          <li>CS 310 Data Structures</li>
-          <li>CS 330 Formal Methods and Models</li>
-          <li>CS 367 Computer Systems and Programming</li>
-        </ul>
-      </li>
-    </ul>
-    <h2 id="projects">Projects</h2>
+  </header>
+  <section id="projects" class="full-width">
+    <h2>Projects</h2>
     <ul class="cards">
       <li>
         <h4>Personal Website</h4>
@@ -46,7 +30,7 @@
           <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io">Github Repo</a></li>
         </ul>
         <div class="container">
-          <iframe src="./index.html" title="Personal Website" ></iframe>
+          <iframe src="./index.html" title="Personal Website">
         </div>
       </li>
       <li>
@@ -57,7 +41,8 @@
           <li><a href="https://www.youtube.com/watch?v=fIX6B69wnek">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe src="https://www.youtube-nocookie.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/fIX6B69wnek" title="YouTube video player" frameborder="0"
+            allow="web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -74,7 +59,8 @@
           <li><a href="https://www.youtube.com/watch?v=t7b9YMaFg1c">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe src="https://www.youtube-nocookie.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/t7b9YMaFg1c" title="YouTube video player" frameborder="0"
+            allow="web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -83,7 +69,9 @@
           <li>Partial recreation of Keep Talking and Nobody Explodes</li>
           <li>HTML, CSS, JavaScript, Custom HTML Elements, SVG</li>
           <li><a href="./bombs.html">Play here</a></li>
-          <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io/blob/main/bombs.html">GitHub Repo</a></li>
+          <li><a href="https://github.com/MistOfJudgement/MistOfJudgement.github.io/blob/main/bombs.html">GitHub
+              Repo</a>
+          </li>
         </ul>
       </li>
       <li>
@@ -110,7 +98,8 @@
           <li><a href="https://www.youtube.com/watch?v=G3fzKPomjSg">Video Demo</a></li>
         </ul>
         <div class="container">
-          <iframe  src="https://www.youtube-nocookie.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/G3fzKPomjSg" title="YouTube video player" frameborder="0"
+            allow="web-share" allowfullscreen></iframe>
         </div>
       </li>
       <li>
@@ -135,7 +124,8 @@
           <li>Typescript</li>
           <li><a href="https://github.com/MistOfJudgement/touhouMath">Github Repo</a></li>
           <li><a href="https://mistofjudgement.github.io/touhouMath/">Play Game</a></li>
-          <li>Used <a href="https://sparen.github.io/ph3tutorials/ph3tutorials.html">Sparen's tutorials</a> as a reference for structures</li>
+          <li>Used <a href="https://sparen.github.io/ph3tutorials/ph3tutorials.html">Sparen's tutorials</a> as a
+            reference for structures</li>
         </ul>
       </li>
       <li>
@@ -145,28 +135,33 @@
           <li>OpenCV, Python</li>
           <li><a href="https://www.youtube.com/watch?v=zuSD_I9mtzo">Video Demo</a></li>
           <li><a href="https://github.com/MistOfJudgement/Projectorboard">Github Repo</a></li>
-          <iframe src="https://www.youtube-nocookie.com/embed/zuSD_I9mtzo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </ul>
+        <div class="container">
+          <iframe src="https://www.youtube-nocookie.com/embed/zuSD_I9mtzo" title="YouTube video player" frameborder="0"
+            allow="web-share" allowfullscreen></iframe>
+        </div>
       </li>
     </ul>
-    <div id="footer">
-      <button onclick="toggleCSS()">Toggle CSS</button>
-    </div>
-    <script>
-      
-      function disableCSSStyle() {
-        document.styleSheets[0].disabled = true;
+  </section>
+  <div id="footer">
+    <button onclick="toggleCSS()">Toggle CSS</button>
+  </div>
+  <script>
+
+    function disableCSSStyle() {
+      document.styleSheets[0].disabled = true;
+    }
+    function enableCSSStyle() {
+      document.styleSheets[0].disabled = false;
+    }
+    function toggleCSS() {
+      if (document.styleSheets[0].disabled) {
+        enableCSSStyle();
+      } else {
+        disableCSSStyle();
       }
-      function enableCSSStyle() {
-        document.styleSheets[0].disabled = false;
-      }
-      function toggleCSS() {
-        if (document.styleSheets[0].disabled) {
-          enableCSSStyle();
-        } else {
-          disableCSSStyle();
-        }
-      }
-    </script>
+    }
+  </script>
 </body>
+
 </html>
